--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "core-js": "^3.6.5",
     "vue": "^2.6.12",
     "vue-router": "^3.4.3"
